tests/typing/bad/testfile-duplicate_var-2.scala

class C { def m(x: Int, x: Boolean){} }
object Main { def main(args: Array[String]) { } }
